example-app/example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: better-service
  labels:
    app: better-app
spec:
  type: LoadBalancer
  selector:
    app: better-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
